test_data/end_to_end/err__use_self/stderr.txt
error: `self` import can only be used in path with prefix
  --> main.cz:1:6
1 | use {self};
         ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:2:6
2 | use {self, self};
         ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:2:12
2 | use {self, self};
               ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:5:17
5 |     use super::{self};
                    ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:6:17
6 |     use super::{self, self};
                    ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:6:23
6 |     use super::{self, self};
                          ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:7:24
7 |     use super::super::{self};
                           ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:8:24
8 |     use super::super::{self, self};
                           ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:8:30
8 |     use super::super::{self, self};
                                 ~~~~

error: `self` import can only be used in path with prefix
  --> main.cz:9:12
9 |     use ::{self};
               ~~~~
